Tests/CompilerTests/negative/duplicate-parameter.hylo
fun f(x: Void, y: Void, x: Void) {}
